--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "crud.js",
   "scripts": {
+     "lint":"eslint",
     "dev": "nodemon ./crud",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
